@@ -195,42 +195,4 @@ class GumgaSecurityProxy {
         return result;
     }
 
-    @ApiOperation(value = "/whois", notes = "Verificar o usuario.")
-    @RequestMapping(method = RequestMethod.POST, value = "/whois")
-    public Map whois(@RequestBody UserImageDTO userImageDTO) {
-        final String url = gumgaValues.getGumgaSecurityUrl() + "/facereco/whois";
-        Map resposta = restTemplate.postForObject(url, userImageDTO, Map.class);
-        return resposta;
-    }
-
-}
-
-class UserImageDTO {
-    private String metadados;
-    private GumgaImage image;
-    private byte[] imageData;
-
-    public String getMetadados() {
-        return metadados;
-    }
-
-    public void setMetadados(String metadados) {
-        this.metadados = metadados;
-    }
-
-    public GumgaImage getImage() {
-        return image;
-    }
-
-    public void setImage(GumgaImage image) {
-        this.image = image;
-    }
-
-    public byte[] getImageData() {
-        return imageData;
-    }
-
-    public void setImageData(byte[] imageData) {
-        this.imageData = imageData;
-    }
 }
